Implemented warning when user navigates away from editor with unsaved changes (closes #30).

--- a/twobuntu/articles/templates/articles/editor.html
+++ b/twobuntu/articles/templates/articles/editor.html
@@ -18,6 +18,10 @@
     <div class="row">
         <div class="col-lg-8">
             {% render_field form.body class+="form-control editor" placeholder=form.body.help_text rows="16" %}
+            {% for error in form.body.errors %}
+                <br>
+                <div class="alert alert-danger"><strong>{{ error }}</strong></div>
+            {% endfor %}
         </div>
         <div class="col-lg-4">
             <div class="well">
