Clarified current API version.

--- a/twobuntu/api/templates/api/index.html
+++ b/twobuntu/api/templates/api/index.html
@@ -21,7 +21,7 @@
             </p>
             <pre>/api/ <strong>API version</strong> / <strong>endpoint</strong></pre>
             <p>
-                The current version of the API is listed at the top of this page.
+                The current version of the API is <strong>1.1</strong>.
             </p>
             <h3 id="methods">Methods</h3>
             <p>
