--- a/twobuntu/templates/messages.html
+++ b/twobuntu/templates/messages.html
@@ -1,5 +1,5 @@
 {% for message in messages %}
-    <div class="alert alert-info">
+    <div class="alert {% if message.tags == "error" %}alert-danger{% else %}alert-info{% endif %}">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{ message }}
     </div>
