Removed breadcrumbs from 404 error page.

--- a/twobuntu/templates/404.html
+++ b/twobuntu/templates/404.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block breadcrumbs %}{% endblock %}
+
 {% block content %}
     <h2>Whoops!</h2>
     <p>That page does not exist.</p>
