Added 'Recent Articles' fragment to the home page and adjusted the jumbotron on at the top.

--- a/twobuntu/accounts/templates/accounts/fragment.html
+++ b/twobuntu/accounts/templates/accounts/fragment.html
@@ -6,17 +6,30 @@
     Each of them writes with a unique perspective, ensuring that we have a diverse collection articles accessible to anyone.
 </p>
 <br>
-<div class="row">
-    {% for user in users|slice:":3" %}
-        <div class="col-sm-4 text-center">
-            <img src="{{ user.email|gravatar }}" class="img-circle">
-            <h4 class="truncate">
-                <a href="{{ user.profile.get_absolute_url }}" title="{{ user.profile }}">{{ user.profile }}</a><br>
-                <small>Author of {{ user.num_articles }} article{{ user.num_articles|pluralize }}</small>
-            </h4>
-            <p>
-                {{ user.profile.bio|linebreaksbr }}
-            </p>
-        </div>
-    {% endfor %}
-</div>
+{% if users %}
+    <div class="row">
+        {% for user in users|slice:":6" %}
+            {% if forloop.counter0 == 3 %}
+                </div>
+                <br>
+                <div class="row">
+            {% endif %}
+            <div class="col-sm-4 text-center">
+                <img src="{{ user.email|gravatar }}" class="img-circle">
+                <h4 class="truncate">
+                    <a href="{{ user.profile.get_absolute_url }}" title="{{ user.profile }}">{{ user.profile }}</a><br>
+                    <small>Author of {{ user.num_articles }} article{{ user.num_articles|pluralize }}</small>
+                </h4>
+                <div class="featured-author fade-bottom">
+                    <p>
+                        {{ user.profile.bio|linebreaksbr }}
+                    </p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+{% else %}
+    <p class="text-muted">
+        There are currently no registered users.
+    </p>
+{% endif %}
