--- a/twobuntu/static/css/global.css
+++ b/twobuntu/static/css/global.css
@@ -13,6 +13,7 @@ div.jumbotron { padding: 16px; }
 div.jumbotron h1 { font-size: 24pt; }
 div.jumbotron p { font-size: 12pt; }
 div.navbar { box-shadow: 0 0 8px black; margin-bottom: 0; }
+h1 small { display: block; font-size: 12pt; line-height: 14pt; }
 img { max-width: 100%; }
 p, li { text-align: justify; }
 textarea.editor { font-family: monospace; }
@@ -38,8 +39,9 @@ div.content h4:first-child { margin-top: 0; }
 div.footer { background-color: #ddd; padding: 32px 0; }
 div.footer img { margin-top: 6px; }
 
-/* Article styles. */
-div.featured { height: 200px; overflow: hidden; }
+/* Featured styles. */
+div.featured-article { height: 200px; overflow: hidden; }
+div.featured-author { height: 100px; overflow: hidden; }
 
 /* Ensure the page is never wider than 992px. */
 @media (min-width: 992px) {
