Adds postgresql and redis site links to the about page

--- a/twobuntu/templates/pages/about.html
+++ b/twobuntu/templates/pages/about.html
@@ -95,7 +95,7 @@
                     </p>
                     <p>
                         Our articles are written in <a href="https://daringfireball.net/projects/markdown/">Markdown</a>
-                        and stored in a PostgreSQL database. The Markdown is rendered to HTML and cached with Redis.
+                        and stored in a <a href="http://www.postgresql.org/">PostgreSQL</a> database. The Markdown is rendered to HTML and cached with <a href="http://redis.io/">Redis</a>.
                     </p>
                     {% if commit %}
                         <p>
