--- a/twobuntu/news/templates/news/fragment.html
+++ b/twobuntu/news/templates/news/fragment.html
@@ -8,7 +8,7 @@
         </h3>
     </div>
     <div class="list-group">
-        {% for item in items %}
+        {% for item in items|slice:":4" %}
             <a href="{{ item.url }}" class="list-group-item">
                 <span class="badge">{{ item.date|date:"M d" }}</span>
                 <h4 class="list-group-item-heading">{{ item.title }}</h4>
