--- a/twobuntu/templates/pages/links.html
+++ b/twobuntu/templates/pages/links.html
@@ -5,31 +5,65 @@
     <p>
         Take a gander at these links to some of our friends, interesting and useful resources, and more.
     </p>
-    <h3>Site members:</h3>
-    <ul>
-        <li>
+    <div class="row">
+        <div class="col-sm-6">
+            <h3>Site members:</h3>
+            <ul>
+                <li>
+                    <p>
+                        Roland Taylor:<br>
+                        <a href="http://about.me/rolandixor">http://about.me/rolandixor</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Joshua P. Bell:<br>
+                        <a href="http://www.joshuapbell.com/">http://www.joshuapbell.com/</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        James Gifford:<br>
+                        <a href="http://jamesrgifford.com/">http://jamesrgifford.com/</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Nathan Osman:<br>
+                        <a href="http://quickmediasolutions.com/">http://quickmediasolutions.com/</a>
+                    </p>
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-6">
+            <h3>Social pages:</h3>
             <p>
-                Roland Taylor:<br>
-                <a href="http://about.me/rolandixor">http://about.me/rolandixor</a>
+                Drop us a line on your favorite social network.
             </p>
-        </li>
-        <li>
             <p>
-                Joshua P. Bell:<br>
-                <a href="http://www.joshuapbell.com/">http://www.joshuapbell.com/</a>
+                <a href="https://www.facebook.com/pages/2buntucom/129981420418132"
+                   title="2buntu on Facebook"
+                   target="_blank">
+                    <span class="fa fa-facebook fa-fw"></span>
+                    Facebook
+                </a>
             </p>
-        </li>
-        <li>
             <p>
-                James Gifford:<br>
-                <a href="http://jamesrgifford.com/">http://jamesrgifford.com/</a>
+                <a href="https://plus.google.com/+2buntu"
+                   title="2buntu on Google+"
+                   target="_blank">
+                    <span class="fa fa-google-plus fa-fw"></span>
+                    Google+
+                </a>
             </p>
-        </li>
-        <li>
             <p>
-                Nathan Osman:<br>
-                <a href="http://quickmediasolutions.com/">http://quickmediasolutions.com/</a>
+                <a href="https://twitter.com/2buntu"
+                   title="2buntu on Twitter"
+                   target="_blank">
+                    <span class="fa fa-twitter fa-fw"></span>
+                    Twitter
+                </a>
             </p>
-        </li>
-    </ul>
+        </div>
+    </div>
 {% endblock %}
