--- a/twobuntu/templates/field.html
+++ b/twobuntu/templates/field.html
@@ -7,7 +7,7 @@
         </label>
     </div>
 {% else %}
-    <div class="form-group">
+    <div class="form-group{% if field.errors %} has-error has-feedback{% endif %}">
         <label for="id_{{ field.name }}" class="control-label">
             {{ field.label }}
         </label>
@@ -16,8 +16,11 @@
         {% else %}
             {% render_field field class+="form-control" placeholder=field.help_text %}
         {% endif %}
+        {% for error in field.errors %}
+            <span class="fa fa-warning form-control-feedback"></span>
+            <p class="help-block text-danger">
+                <strong>{{ error }}</strong>
+            </p>
+        {% endfor %}
     </div>
 {% endif %}
-{% for error in field.errors %}
-    <div class="alert alert-danger"><strong>{{ error }}</strong></div>
-{% endfor %}
