--- a/twobuntu/articles/templates/articles/editor.html
+++ b/twobuntu/articles/templates/articles/editor.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-lg-8">
             <div class="form-group{% if form.body.errors %} has-error has-feedback{% endif %}">
-                {% render_field form.body class+="form-control editor" placeholder=form.body.help_text rows="16" %}
+                {% render_field form.body class+="form-control" rows="16" %}
                 {% for error in form.body.errors %}
                     <p class="help-block text-danger">
                         <strong>{{ error }}</strong>
@@ -68,6 +68,7 @@
     <script>
         $(function() {
             window.editor = new Editor("{% url "images:upload" %}");
+            $('#id_title').focus();
         });
     </script>
 {% endblock %}
