Includes Amith and Nitin to the About Us and Links pages

--- a/twobuntu/templates/pages/about.html
+++ b/twobuntu/templates/pages/about.html
@@ -24,8 +24,8 @@
                 <li>
                     <p>
                         2buntu was founded around March 2011 by Roland Taylor, and later
-                        expanded to included the likes of Joshua P. Bell, James Gifford, and Nathan Osman.
-                        These four are our current site and community administrators.
+                        expanded to included the likes of Joshua P. Bell, James Gifford, Nathan Osman, Amith K.K. and Nitin Venkatesh.
+                        These six are our current site and community administrators.
                     </p>
                 </li>
                 <li>
