--- a/twobuntu/templates/pages/links.html
+++ b/twobuntu/templates/pages/links.html
@@ -33,6 +33,18 @@
                         <a href="http://quickmediasolutions.com/">http://quickmediasolutions.com/</a>
                     </p>
                 </li>
+                <li>
+                    <p>
+                        Amith K.K.:<br>
+                        <a href="http://amithkk.com/">http://amithkk.com/</a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Nitin Venkatesh:<br>
+                        <a href="http://nitstorm.github.io/">http://nitstorm.github.io/</a>
+                    </p>
+                </li>
             </ul>
         </div>
         <div class="col-sm-6">
