--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -20,7 +20,7 @@
                                     license.
                                 </p>
                                 <p>
-                                    <form method="post" action="{% url "articles:release" article.id %}">
+                                    <form method="post" action="{% url "articles:modify" "release" article.id %}">
                                         {% csrf_token %}
                                         <button type="submit" class="btn btn-sm btn-primary">
                                             <span class="fa fa-globe"></span>
@@ -73,7 +73,7 @@
                 <div class="alert alert-warning">
                     <p>Please click the button below when you are ready to submit your article for publishing.</p>
                     <br>
-                    <form method="post" action="{% url "articles:submit" article.id %}">
+                    <form method="post" action="{% url "articles:modify" "submit" article.id %}">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-sm btn-primary">
                             <span class="fa fa-check"></span>
@@ -87,7 +87,7 @@
                     <p>This article has not yet been approved by a staff member.</p>
                     {% if user.is_staff %}
                         <br>
-                        <form method="post" action="{% url "articles:publish" article.id %}">
+                        <form method="post" action="{% url "articles:modify" "publish" article.id %}">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-sm btn-primary">
                                 <span class="fa fa-check"></span>
