--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -1,4 +1,15 @@
 {% extends "base.html" %}
+{% load gravatar %}
+
+{% block meta %}
+    <meta property="og:title" content="{{ article.title }}">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="{{ request.build_absolute_uri }}">
+    <meta property="og:image" content="{{ article.author.profile.user.email|gravatar:256 }}">
+    <meta property="article:publisher" content="https://www.facebook.com/pages/2buntucom/129981420418132">
+    <meta property="article:section" content="{{ article.category.name }}">
+    <meta property="article:published_time" content="{{ article.date|date:"c" }}">
+{% endblock  %}
 
 {% block content %}
     <div class="row">
