--- a/twobuntu/templates/base.html
+++ b/twobuntu/templates/base.html
@@ -4,9 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <meta name="author" content="Nathan Osman">
-        <meta name="description" content="A blog created by Ubuntu community members that provides news, tutorials, reviews, tips, and the occasional rant - all centering around the world's most popular Linux distribution: Ubuntu."/>
-        <meta name="wot-verification" content="e3ab301eccb71149c5d5"/> 
+        {% block meta %}{% endblock %}
 
         {% load static %}
         <link rel="shortcut icon" href="{% static "img/favicon.png" %}">
