--- a/twobuntu/templates/pages/index.html
+++ b/twobuntu/templates/pages/index.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block meta %}
+    <meta name="author" content="Nathan Osman">
+    <meta name="description" content="A blog created by Ubuntu community members that provides news, tutorials, reviews, tips, and the occasional rant - all centering around the world's most popular Linux distribution: Ubuntu."/>
+    <meta name="wot-verification" content="e3ab301eccb71149c5d5"/>
+{% endblock %}
+
 {% block rss %}
     <link rel="alternate" type="application/rss+xml" title="2buntu Articles" href="{% url "rss" %}" />
 {% endblock %}
