--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -6,6 +6,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="{{ request.build_absolute_uri }}">
     <meta property="og:image" content="{{ article.author.profile.user.email|gravatar:256 }}">
+    <meta property="og:description" content="{{ rendered|striptags|truncatewords:20 }}">
     <meta property="article:publisher" content="https://www.facebook.com/pages/2buntucom/129981420418132">
     <meta property="article:section" content="{{ article.category.name }}">
     <meta property="article:published_time" content="{{ article.date|date:"c" }}">
@@ -54,7 +55,7 @@
                 </small>
             </h2>
             <div class="article">
-                {{ article.render }}
+                {{ rendered }}
             </div>
             <hr>
             <!-- Disqus comments. -->
