Added alt tags to images on home page.

--- a/twobuntu/templates/footer.html
+++ b/twobuntu/templates/footer.html
@@ -53,7 +53,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="media">
-                    <img src="{% static "img/cc-by-sa.png" %}" class="pull-left media-object">
+                    <img src="{% static "img/cc-by-sa.png" %}" alt="CC-BY-SA 4.0 Logo" class="pull-left media-object">
                     <div class="media-body">
                         <p class="text-muted">
                             Unless otherwise noted, all content is released under a
