--- a/twobuntu/templates/pages/index.html
+++ b/twobuntu/templates/pages/index.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <a href="{% url "ads:index" %}">
-                <img src="{% static "img/blank-ad.png" %}">
+                <img src="{% static "img/blank-ad.png" %}" alt="Advertise Here">
             </a>
             <br><br>
             {% include "categories/fragment.html" %}
