--- a/twobuntu/accounts/templates/accounts/fragment.html
+++ b/twobuntu/accounts/templates/accounts/fragment.html
@@ -15,7 +15,7 @@
                 <div class="row">
             {% endif %}
             <div class="col-sm-4 text-center">
-                <img src="{{ user.email|gravatar }}" class="img-circle">
+                <img src="{{ user.email|gravatar }}" alt="{{ user }}'s Gravatar" class="img-circle">
                 <h4 class="truncate">
                     <a href="{{ user.profile.get_absolute_url }}" title="{{ user.profile }}">{{ user.profile }}</a><br>
                     <small>Author of {{ user.num_articles }} article{{ user.num_articles|pluralize }}</small>
