Converted search box into a component and added it to article pages.

--- a/twobuntu/articles/templates/articles/view.html
+++ b/twobuntu/articles/templates/articles/view.html
@@ -127,6 +127,8 @@
                     </a>
                 </div>
             {% endif %}
+            {% include "components/search.html" %}
+            <hr>
             <h4>Share This Article</h4>
             <div id="share-buttons">
                 {% for site in social %}
